// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BlancDocument Component rendering functionality Basic render -> div Hello 1`] = `
<div
  className="bl-doc"
>
  <div>
    Hello
  </div>
</div>
`;

exports[`BlancDocument Component rendering functionality mock part renders correctly 1`] = `
<div
  className="bl-doc"
>
  <div>
    <span>
      Hello text
    </span>
    <div>
      Hellow from inside content
    </div>
    <div
      style={
        Object {
          "color": "blue",
        }
      }
    >
      Hello from object
    </div>
  </div>
</div>
`;
